--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "server": "node src/server.js"
+
   },
   "dependencies": {
     "axios": "^1.13.2",
     "dotenv": "^17.2.3",
+    "express": "^5.2.1",
     "framer-motion": "^12.23.26",
+    "js": "^0.1.0",
     "next": "16.1.0",
+    "pg": "^8.16.3",
+    "pool": "^0.4.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.69.0",
