--- a/package.json
+++ b/package.json
@@ -5,21 +5,20 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "eslint",
-    "server": "node src/server.js"
+    "start": "next start"
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "cloudinary": "^2.8.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "framer-motion": "^12.23.26",
     "js": "^0.1.0",
-    "next": "16.1.0",
+    "next": "^15.5.3",
     "pg": "^8.16.3",
     "pool": "^0.4.1",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.69.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0"
