--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^5.2.1",
     "framer-motion": "^12.23.26",
     "js": "^0.1.0",
+    "lucide-react": "^0.562.0",
     "next": "^15.5.3",
     "pg": "^8.16.3",
     "pool": "^0.4.1",
