--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "express": "^5.2.1",
     "framer-motion": "^12.23.26",
     "js": "^0.1.0",
+    "lucide": "^0.562.0",
     "lucide-react": "^0.562.0",
     "next": "^15.5.9",
     "pg": "^8.16.3",
     "pool": "^0.4.1",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.69.0",
     "react-hot-toast": "^2.6.0",
